--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cpu_features"]
 	path = cpu_features
-	url = https://github.com/google/cpu_features.git
+	url = https://github.com/sbehnke/cpu_features.git
